refine report format

--- a/etc/css/index.css
+++ b/etc/css/index.css
@@ -3,11 +3,11 @@ html {min-width: 776px; }
 body {background: #6D89DD; font-family: arial;}
 
 #report {border:10px;width:100%;text-align:left;background-color:#0080FF;}
-#report tr.header{vertical-align:center;background-color:#20A0FF;}
-#report tr.title{vertical-align:center;background-color:#20A0FF;}
-#report td.col1{width:10%;vertical-align:center;background-color:#20E8FF;}
-#report td.col2{width:30%;vertical-align:top;background-color:#20E8FF;}
-#report td.col3{width:60%;vertical-align:center;background-color:#20E8FF;}
+#report tr.header{vertical-align:center;background-color:#FFE880;}
+#report tr.title{vertical-align:center;background-color:#20C080;}
+#report td.col1{width:10%;vertical-align:center;background-color:#20E880;}
+#report td.col2{width:30%;vertical-align:top;background-color:#20E880;}
+#report td.col3{width:60%;vertical-align:center;background-color:#20E880;}
 
 #subfolder {border:10px;width:100%;text-align:left;background-color:#0080FF;}
 #subfolder tr.header{vertical-align:center;background-color:#20A0FF;}
